added change 2 , now using VADER for sentiment analysis

--- a/Market_Forecast_RNN.ipynb
+++ b/Market_Forecast_RNN.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -819,12 +820,12 @@
         "###############################################################"
       ],
       "metadata": {
-        "id": "IS54Lcbp76u7",
-        "outputId": "b28c49b5-453f-4156-e2e6-e84a9acc5b22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "id": "IS54Lcbp76u7",
+        "outputId": "b28c49b5-453f-4156-e2e6-e84a9acc5b22"
       },
       "execution_count": 21,
       "outputs": [
@@ -1202,7 +1203,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "'''\n",
         "from textblob import TextBlob\n",
         "\n",
         "sentiments = []\n",
@@ -1220,11 +1221,11 @@
         "print(sample)\n"
       ],
       "metadata": {
-        "id": "FGeWVnYP87Hr",
-        "outputId": "80f0ce11-1890-4ca1-8177-ba66b0baf39b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FGeWVnYP87Hr",
+        "outputId": "80f0ce11-1890-4ca1-8177-ba66b0baf39b"
       },
       "execution_count": 23,
       "outputs": [
@@ -1250,6 +1251,55 @@
     {
       "cell_type": "code",
       "source": [
+        "#CHANGE 2 using vader for better and consistent sentiment scoring\n",
+        "\n",
+        "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+        "import nltk\n",
+        "\n",
+        "# Ensure lexicon downloaded\n",
+        "nltk.download('vader_lexicon', quiet=True)\n",
+        "\n",
+        "sia = SentimentIntensityAnalyzer()\n",
+        "\n",
+        "news_df['sentiment'] = news_df['title'].apply(\n",
+        "    lambda x: sia.polarity_scores(str(x))['compound'] if isinstance(x, str) else 0\n",
+        ")\n",
+        "\n",
+        "# Preview sentiment-scored headlines\n",
+        "sample = news_df[['title', 'sentiment']].head(10)\n",
+        "print(sample)"
+      ],
+      "metadata": {
+        "id": "bzUuVYXDCdLr",
+        "outputId": "53cd68f7-feaa-4cff-bfb1-938ad09a584e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                               title  sentiment\n",
+            "0  The Mini App Partner Program launch seen as a ...     0.0000\n",
+            "1  'Who You Spend Your Time With Shapes Everythin...    -0.1779\n",
+            "2  What the Bank of England's stablecoin cap mean...     0.0000\n",
+            "3  'You Do Want A Bubble,' Says Groq CEO Jonathan...     0.6798\n",
+            "4  If You've Ever Pictured Dave Ramsey On 'Shark ...     0.0000\n",
+            "5  Trump tariffs, Tech selloff, Fed rate cute: To...     0.5859\n",
+            "6  Jim Cramer Wants You to Buy These 2 “Incredibl...     0.0000\n",
+            "7  Stock Market Today: Dow Jones Index Slides Ano...    -0.2500\n",
+            "8       Validea Detailed Fundamental Analysis - AAPL     0.0000\n",
+            "9  Apple (AAPL) Trending as Analysts Debate Wheth...    -0.1280\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# VERIFICATION: See a few of the fetched headlines and their individual sentiment scores\n",
         "sample = news_df[['title', 'sentiment']].head(10)\n",
         "print(sample)\n"
@@ -1259,25 +1309,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MZ1b7UsgyJs8",
-        "outputId": "a3190f31-ee3c-45c0-9594-648f00c92c8d"
+        "outputId": "b8eadfb2-11c5-43ba-a05f-73301eba4b54"
       },
-      "execution_count": 24,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "                                               title  sentiment\n",
-            "0  The Mini App Partner Program launch seen as a ...   0.163636\n",
-            "1  'Who You Spend Your Time With Shapes Everythin...  -0.200000\n",
-            "2  What the Bank of England's stablecoin cap mean...   0.000000\n",
-            "3  'You Do Want A Bubble,' Says Groq CEO Jonathan...   0.000000\n",
-            "4  If You've Ever Pictured Dave Ramsey On 'Shark ...   0.000000\n",
-            "5  Trump tariffs, Tech selloff, Fed rate cute: To...   0.500000\n",
-            "6  Jim Cramer Wants You to Buy These 2 “Incredibl...   0.550000\n",
-            "7  Stock Market Today: Dow Jones Index Slides Ano...   0.136364\n",
-            "8       Validea Detailed Fundamental Analysis - AAPL   0.400000\n",
-            "9  Apple (AAPL) Trending as Analysts Debate Wheth...   0.000000\n"
+            "0  The Mini App Partner Program launch seen as a ...     0.0000\n",
+            "1  'Who You Spend Your Time With Shapes Everythin...    -0.1779\n",
+            "2  What the Bank of England's stablecoin cap mean...     0.0000\n",
+            "3  'You Do Want A Bubble,' Says Groq CEO Jonathan...     0.6798\n",
+            "4  If You've Ever Pictured Dave Ramsey On 'Shark ...     0.0000\n",
+            "5  Trump tariffs, Tech selloff, Fed rate cute: To...     0.5859\n",
+            "6  Jim Cramer Wants You to Buy These 2 “Incredibl...     0.0000\n",
+            "7  Stock Market Today: Dow Jones Index Slides Ano...    -0.2500\n",
+            "8       Validea Detailed Fundamental Analysis - AAPL     0.0000\n",
+            "9  Apple (AAPL) Trending as Analysts Debate Wheth...    -0.1280\n"
           ]
         }
       ]
