general improvement with stock data fetching

--- a/Market_Forecast_RNN.ipynb
+++ b/Market_Forecast_RNN.ipynb
@@ -62,7 +62,10 @@
         "\n",
         "# Download historical data (daily prices)\n",
         "# Took data from Jan 2020 to Oct 2025\n",
-        "data = yf.download(ticker, start='2025-01-01', end='2025-10-01')\n",
+        "data = yf.download(ticker, start='2025-01-01', end='2025-10-01', auto_adjust=True)\n",
+        "\n",
+        "# Flatten column names to a single level for easier access\n",
+        "data.columns = data.columns.droplevel(1)\n",
         "\n",
         "# Show first few rows for verification\n",
         "print(\"Dataset shape:\", data.shape)\n",
@@ -71,19 +74,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 272
         },
         "id": "ETs3XKK3dgl5",
-        "outputId": "540734c6-8e86-46fd-df3b-f663b1a66b6e"
+        "outputId": "b10be57d-fbd4-4279-cfee-cfa201da06e6"
       },
-      "execution_count": 100,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-37984150.py:10: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-            "  data = yf.download(ticker, start='2025-01-01', end='2025-10-01')\n",
             "\r[*********************100%***********************]  1 of 1 completed"
           ]
         },
@@ -106,7 +107,6 @@
           "data": {
             "text/plain": [
               "Price            Close        High         Low        Open     Volume\n",
-              "Ticker            TSLA        TSLA        TSLA        TSLA       TSLA\n",
               "Date                                                                 \n",
               "2025-01-02  379.279999  392.730011  373.040009  390.100006  109710700\n",
               "2025-01-03  410.440002  411.880005  379.450012  381.480011   95423300\n",
@@ -116,7 +116,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-54490748-4c2a-4199-86fb-d6a6533f4e13\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-475be658-f97a-424f-a3c1-d2b73142bbeb\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -127,31 +127,19 @@
               "        vertical-align: top;\n",
               "    }\n",
               "\n",
-              "    .dataframe thead tr th {\n",
-              "        text-align: left;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead tr:last-of-type th {\n",
+              "    .dataframe thead th {\n",
               "        text-align: right;\n",
               "    }\n",
               "</style>\n",
               "<table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
-              "    <tr>\n",
+              "    <tr style=\"text-align: right;\">\n",
               "      <th>Price</th>\n",
               "      <th>Close</th>\n",
               "      <th>High</th>\n",
               "      <th>Low</th>\n",
               "      <th>Open</th>\n",
               "      <th>Volume</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Ticker</th>\n",
-              "      <th>TSLA</th>\n",
-              "      <th>TSLA</th>\n",
-              "      <th>TSLA</th>\n",
-              "      <th>TSLA</th>\n",
-              "      <th>TSLA</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Date</th>\n",
@@ -209,7 +197,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-54490748-4c2a-4199-86fb-d6a6533f4e13')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-475be658-f97a-424f-a3c1-d2b73142bbeb')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -261,12 +249,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-54490748-4c2a-4199-86fb-d6a6533f4e13 button.colab-df-convert');\n",
+              "        document.querySelector('#df-475be658-f97a-424f-a3c1-d2b73142bbeb button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-54490748-4c2a-4199-86fb-d6a6533f4e13');\n",
+              "        const element = document.querySelector('#df-475be658-f97a-424f-a3c1-d2b73142bbeb');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -286,8 +274,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-af354a1b-48de-42c0-a551-2cf3a3ac28cf\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-af354a1b-48de-42c0-a551-2cf3a3ac28cf')\"\n",
+              "    <div id=\"df-30e869a6-484f-4e47-99a7-2f92cb978304\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-30e869a6-484f-4e47-99a7-2f92cb978304')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -406,7 +394,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-af354a1b-48de-42c0-a551-2cf3a3ac28cf button');\n",
+              "            document.querySelector('#df-30e869a6-484f-4e47-99a7-2f92cb978304 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -419,11 +407,11 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "data",
-              "summary": "{\n  \"name\": \"data\",\n  \"rows\": 186,\n  \"fields\": [\n    {\n      \"column\": [\n        \"Date\",\n        \"\"\n      ],\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": \"2025-01-02 00:00:00\",\n        \"max\": \"2025-09-30 00:00:00\",\n        \"num_unique_values\": 186,\n        \"samples\": [\n          \"2025-06-17 00:00:00\",\n          \"2025-08-29 00:00:00\",\n          \"2025-09-08 00:00:00\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": [\n        \"Close\",\n        \"TSLA\"\n      ],\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54.25171234425047,\n        \"min\": 221.86000061035156,\n        \"max\": 444.7200012207031,\n        \"num_unique_values\": 185,\n        \"samples\": [\n          404.6000061035156,\n          263.45001220703125,\n          323.8999938964844\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": [\n        \"High\",\n        \"TSLA\"\n      ],\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54.390514928009026,\n        \"min\": 230.10000610351562,\n        \"max\": 450.9800109863281,\n        \"num_unique_values\": 185,\n        \"samples\": [\n          419.989990234375,\n          272.6499938964844,\n          331.3699951171875\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": [\n        \"Low\",\n        \"TSLA\"\n      ],\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54.47880179131655,\n        \"min\": 214.25,\n        \"max\": 439.5,\n        \"num_unique_values\": 185,\n        \"samples\": [\n          401.3399963378906,\n          260.0199890136719,\n          314.6000061035156\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": [\n        \"Open\",\n        \"TSLA\"\n      ],\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54.695146592574545,\n        \"min\": 223.77999877929688,\n        \"max\": 444.3500061035156,\n        \"num_unique_values\": 182,\n        \"samples\": [\n          401.5299987792969,\n          272.05999755859375,\n          329.2200012207031\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": [\n        \"Volume\",\n        \"TSLA\"\n      ],\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 36474254,\n        \"min\": 45965400,\n        \"max\": 287499800,\n        \"num_unique_values\": 186,\n        \"samples\": [\n          88282700,\n          81145700,\n          75208300\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"data\",\n  \"rows\": 186,\n  \"fields\": [\n    {\n      \"column\": \"Date\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": \"2025-01-02 00:00:00\",\n        \"max\": \"2025-09-30 00:00:00\",\n        \"num_unique_values\": 186,\n        \"samples\": [\n          \"2025-06-17 00:00:00\",\n          \"2025-08-29 00:00:00\",\n          \"2025-09-08 00:00:00\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Close\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54.25171234425047,\n        \"min\": 221.86000061035156,\n        \"max\": 444.7200012207031,\n        \"num_unique_values\": 185,\n        \"samples\": [\n          404.6000061035156,\n          263.45001220703125,\n          323.8999938964844\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"High\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54.390514928009026,\n        \"min\": 230.10000610351562,\n        \"max\": 450.9800109863281,\n        \"num_unique_values\": 185,\n        \"samples\": [\n          419.989990234375,\n          272.6499938964844,\n          331.3699951171875\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Low\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54.47880179131655,\n        \"min\": 214.25,\n        \"max\": 439.5,\n        \"num_unique_values\": 185,\n        \"samples\": [\n          401.3399963378906,\n          260.0199890136719,\n          314.6000061035156\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Open\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54.695146592574545,\n        \"min\": 223.77999877929688,\n        \"max\": 444.3500061035156,\n        \"num_unique_values\": 182,\n        \"samples\": [\n          401.5299987792969,\n          272.05999755859375,\n          329.2200012207031\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Volume\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 36474254,\n        \"min\": 45965400,\n        \"max\": 287499800,\n        \"num_unique_values\": 186,\n        \"samples\": [\n          88282700,\n          81145700,\n          75208300\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 100
+          "execution_count": 120
         }
       ]
     },
@@ -571,80 +559,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "''' # STEP 8.5: Add Sentiment Feature using News Headlines\n",
-        "# (Extension idea from team – combine market data + news sentiment)\n",
-        "# This feature uses daily sentiment of news articles for the company (Lecture 6: Multi-Feature DL)\n",
-        "\n",
-        "!pip install nltk requests --quiet\n",
-        "\n",
-        "import requests\n",
-        "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-        "import nltk\n",
-        "from google.colab import userdata\n",
-        "\n",
-        "nltk.download('vader_lexicon', quiet=True)\n",
-        "\n",
-        "# Initialize sentiment analyzer\n",
-        "sia = SentimentIntensityAnalyzer()\n",
-        "#pulling api key from google colab secrets\n",
-        "userdata.get('api_key')\n",
-        "\n",
-        "\n",
-        "# Sentiment Feature using EODHD Financial News API\n",
-        "# (Replaces earlier NewsAPI integration for better financial coverage)\n",
-        "\n",
-        "def get_company_news(ticker, api_token=\"api_key\"):\n",
-        "    url = f\"https://eodhd.com/api/news?s={ticker}.US&offset=0&limit=50&api_token={api_token}&fmt=json\"\n",
-        "    try:\n",
-        "        r = requests.get(url)\n",
-        "        r.raise_for_status()\n",
-        "        data = r.json()\n",
-        "        if isinstance(data, dict):\n",
-        "            print(\"⚠️ Unexpected response format, using empty list.\")\n",
-        "            return pd.DataFrame(columns=[\"date\", \"title\"])\n",
-        "        return pd.DataFrame([{\"date\": item[\"date\"][:10], \"title\": item[\"title\"]} for item in data])\n",
-        "    except Exception as e:\n",
-        "        print(\"Could not fetch news:\", e)\n",
-        "        return pd.DataFrame(columns=[\"date\", \"title\"])\n",
-        "\n",
-        "# Fetch headlines for the company\n",
-        "print(\"\\nFetching news data...\")\n",
-        "news_df = get_company_news(\"TSLA\")  # you can change to 'MSFT', 'AAPL', etc.\n",
-        "print(\"Fetched news headlines:\", len(news_df))\n",
-        "\n",
-        "# Perform sentiment analysis\n",
-        "if not news_df.empty:\n",
-        "    news_df['sentiment'] = news_df['title'].apply(lambda x: sia.polarity_scores(str(x))['compound'])\n",
-        "    news_df['date'] = pd.to_datetime(news_df['date'])\n",
-        "    daily_sentiment = news_df.groupby('date')['sentiment'].mean().reset_index()\n",
-        "else:\n",
-        "    print(\"No news data found, using neutral sentiment (0).\")\n",
-        "    daily_sentiment = pd.DataFrame(columns=['date', 'sentiment'])\n",
-        "\n",
-        "# Merge sentiment into stock data\n",
-        "data_multi = data.copy()\n",
-        "data_multi.columns = [col[0] if isinstance(col, tuple) else col for col in data_multi.columns]\n",
-        "data_multi.reset_index(inplace=True)\n",
-        "\n",
-        "data_multi = data_multi.merge(daily_sentiment, left_on='Date', right_on='date', how='left')\n",
-        "if 'date' in data_multi.columns:\n",
-        "    data_multi.drop(columns=['date'], inplace=True)\n",
-        "\n",
-        "data_multi['sentiment'] = data_multi['sentiment'].fillna(0)\n",
-        "\n",
-        "print(\"\\nSentiment feature added successfully! Example:\")\n",
-        "print(data_multi[['Close', 'sentiment']].head())\n",
-        "\n",
-        "# Sentiment Summary\n",
-        "print(\"\\nSentiment Summary:\")\n",
-        "print(f\"Average sentiment score: {news_df['sentiment'].mean():.4f}\")\n",
-        "print(f\"Positive headlines: {(news_df['sentiment'] > 0).mean() * 100:.1f}%\")\n",
-        "print(f\"Negative headlines: {(news_df['sentiment'] < 0).mean() * 100:.1f}%\")\n",
-        "print(f\"Neutral headlines:  {(news_df['sentiment'] == 0).mean() * 100:.1f}%\")\n",
-        "\n",
-        "'''"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
